JE-55778 [java-memory-agent] Add options for GC